# burnout3

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: asset-formats.md  kernel-imports.md  renderware.md  xbe-analysis.md
src/audio/: dsound_device.c
src/d3d/: CMakeLists.txt  d3d8_device.c  d3d8_shaders.c  d3d8_xbox.h
src/game/: CMakeLists.txt  main.c
src/game/recomp/: recomp_manual.c  recomp_test.c  recomp_types.h
src/kernel/: CMakeLists.txt  PROGRESS.md  kernel.h  kernel_bridge.c  kernel_file.c  kernel_memory.c  kernel_rtl.c  kernel_thunks.c  xbox_memory_layout.c  xbox_memory_layout.h
tools/abi_analysis/: __init__.py  __main__.py  analyzer.py
tools/asset_tools/: __init__.py  __main__.py  arena_parser.py  catalog.py  formats.py  texture_convert.py  txd_parser.py
tools/disasm/output/: labels.json  strings.json  summary.json
tools/func_id/: clustering.py  config.py  identify.py  output.py  stub_classifier.py
tools/global_map/: __init__.py  __main__.py  mapper.py
tools/recomp/: __main__.py  config.py  disasm.py  lifter.py  output.py  translator.py
tools/xbe_parser/: burnout3_analysis.json
